--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                     </div>
                 </div>
 
-                <form id="contact-form" class="contact-form">
+                <form id="contact-form" class="contact-form" action="https://formspree.io/f/mldejpgn" method="POST">
                     <div class="form-group">
                         <label for="name">Your Name</label>
                         <input type="text" id="name" name="name" required>
@@ -382,7 +382,7 @@
 
                     <div class="form-group">
                         <label for="message">Project Details</label>
-                        <textarea id="message" name="message" rows="4" placeholder="Please describe your project..."></textarea>
+                        <textarea id="message" name="message" rows="4" placeholder="Please describe your project..." required></textarea>
                     </div>
 
                     <button type="submit" class="submit-btn">Send Message</button>
