--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                     </div>
                 </div>
 
-                <form id="contact-form" class="contact-form" action="https://formspree.io/f/mldejpgn" method="POST">
+                <form id="contact-form" class="contact-form" action="https://formspree.io/f/xzzjbned" method="POST">
                     <div class="form-group">
                         <label for="name">Your Name</label>
                         <input type="text" id="name" name="name" required>
